--- a/src/main/resources/static/css/post-styles.css
+++ b/src/main/resources/static/css/post-styles.css
@@ -127,7 +127,7 @@ main {
 
 .article-share img {
     margin-right: 18px;
-    width: 20px;
+    width: 22px;
 
 }
 
@@ -207,7 +207,7 @@ main {
     width: 75px;
 }
 
-form button {
+.wrt-comment button {
     border: none;
     width: 8%;
     font-size: 15px;
