--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -114,114 +114,69 @@
         <div class="card">
             <div class="top-container">
                 <div class="card-image">
-                    <img class="card-img top-radius" src="images/photo-1.jpg"
-                         alt="img"/>
+                    <img class="card-img top-radius" src="/images/photo-1.jpg" alt="img"/>
                 </div>
                 <article>
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do
-                        eiusmod te mpor incididunt ut labore
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod te
+                        mpor incididunt ut labore
                     </h1>
                     <p class="block-with-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
                     </p>
                 </article>
             </div>
             <div class="card-bottom">
                 <div class="hr"></div>
                 <footer class="card-footer">
-                    <div class="chip-container">
-                        <div class="chips">
-                            <a href="#">Sports</a>
-                        </div>
-                        <div class="chips">
-                            <a href="#">Fun</a>
-                        </div>
-                    </div>
-                    <div class="card-date hidden">
-                        2018-03-04
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read more...</a>
-                    </div>
+                   <div th:replace="fragments :: card-chip-container"></div>
+                    <div th:replace="fragments :: card-read-more"></div>
                 </footer>
             </div>
         </div>
         <div class="card">
             <div class="top-container">
                 <div class="card-image">
-                    <img class="card-img top-radius" src="/images/photo-1.jpg"
-                         alt="img"/>
+                    <img class="card-img top-radius" src="/images/photo-5.jpg" alt="img"/>
                 </div>
                 <article>
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do
-                        eiusmod te mpor incididunt ut labore
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod te
+                        mpor incididunt ut labore
                     </h1>
                     <p class="block-with-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
                     </p>
                 </article>
             </div>
             <div class="card-bottom">
                 <div class="hr"></div>
                 <footer class="card-footer">
-                    <div class="chip-container">
-                        <div class="chips">
-                            <a href="#">Sports</a>
-                        </div>
-                        <div class="chips">
-                            <a href="#">Fun</a>
-                        </div>
-                    </div>
-                    <div class="card-date hidden">
-                        2018-03-04
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read more...</a>
-                    </div>
+                    <div th:replace="fragments :: card-chip-container"></div>
+                    <div th:replace="fragments :: card-read-more"></div>
                 </footer>
             </div>
         </div>
         <div class="card">
             <div class="top-container">
                 <div class="card-image">
-                    <img class="card-img top-radius" src="images/photo-1.jpg"
-                         alt="img"/>
+                    <img class="card-img top-radius" src="/images/photo-10.jpg" alt="img"/>
                 </div>
                 <article>
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do
-                        eiusmod te mpor incididunt ut labore
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod te
+                        mpor incididunt ut labore
                     </h1>
                     <p class="block-with-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
                     </p>
                 </article>
             </div>
             <div class="card-bottom">
                 <div class="hr"></div>
                 <footer class="card-footer">
-                    <div class="chip-container">
-                        <div class="chips">
-                            <a href="#">Sports</a>
-                        </div>
-                        <div class="chips">
-                            <a href="#">Fun</a>
-                        </div>
-                    </div>
-                    <div class="card-date hidden">
-                        2018-03-04
-                    </div>
-                    <div class="read-more">
-                        <a href="#">Read more...</a>
-                    </div>
+                    <div th:replace="fragments :: card-chip-container"></div>
+                    <div th:replace="fragments :: card-read-more"></div>
                 </footer>
             </div>
         </div>
