Add misc changes

--- a/src/main/resources/templates/new-post.html
+++ b/src/main/resources/templates/new-post.html
@@ -18,8 +18,7 @@
             <div class="left-container">
                 <input type="hidden" name="userId" th:value="${user.id}">
                 <div class="input-np inp-title">
-                    <input id="inp-title" class="flat-inp-np" type="text"
-                           name="title"
+                    <input id="inp-title" class="flat-inp-np" type="text" name="title"
                            maxlength="60" autofocus required>
                     <span class="highlight-np"></span>
                     <label for="inp-title" class="label-np">Title</label>
@@ -47,7 +46,7 @@
                 <fieldset class="post-file">
                     <legend>Add an Image or Video</legend>
                     <div class="file-select">
-                        <img class="file-prev" src="/images/placeholder-3.svg"/>
+                        <img class="file-prev" src="/images/placeholder-img.svg"/>
                         <label class="file-upload post-input">
                             <input type="file" name="file" accept="image/*, video/*">
                             Select file
