--- a/src/main/resources/static/css/category-styles.css
+++ b/src/main/resources/static/css/category-styles.css
@@ -6,6 +6,27 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+.cat-emp-prompt {
+    position: absolute;
+    top: -180px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: fit-content;
+    text-align: center;
+    background: #ffffff;
+    width: fit-content;
+    padding: 24px;
+    line-height: 36px;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.cat-emp-prompt img {
+    height: 50px;
+}
+
 a.active {
     background: #00acc1;
     color: white;
